$Id$

2013-06-17  Alex Samorukov <samm@os2.kiev.ua>

	scsicmds.cpp: fix build on RedHat 9

2013-06-12  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- JMicron SSD: P400e/P400m series

2013-06-09  Christian Franke  <franke@computer.org>

	INSTALL, NEWS, README, WARNINGS: Update SVN repository URLs.

2013-06-09  Christian Franke  <franke@computer.org>

	os_win32/smartd_warning.cmd: Using %DATE% in temp file names
	breaks the script if localized date contains '/'
	(This fix is already included in smartmontools-6.1-2.win32-setup.exe).

2013-06-06  Christian Franke  <franke@computer.org>

	os_win32/update-smart-drivedb.nsi: Use new SVN repository for
	download.

2013-06-04  Christian Franke  <franke@computer.org>

	update-smart-drivedb.in: Use new sourceforge code browser for
	download.

2013-04-20  Christian Franke  <franke@computer.org>

	drivedb.h:
	- InnoDisk InnoLite SATADOM D150QV-L SSDs
	- Intel 313 Series SSDs
	- Intel 330 Series SSDs: 240GB
	- JMicron based SSDs: Kingston V200 (ticket #267)
	- Samsung based SSDs: SM843T Series

2013-04-20  Christian Franke  <franke@computer.org>

	configure.ac: Linux: Try 'hostname -y' if 'nishostname' is missing.

2013-04-18  Christian Franke  <franke@computer.org>

	configure.ac, smartd_warning.sh.in: Add platform specific commands for
	host and domain names.
	os_win32/smartd_warning.cmd: Use WMI for DNS domain name.

2013-04-18  Christian Franke  <franke@computer.org>

	scsicmds.cpp, scsiprint.cpp: Silence -Wmaybe-uninitialized warning
	(g++ 4.8.0 with -flto).

2013-03-29  Christian Franke  <franke@computer.org>

	os_darwin.cpp: Silence -Wself-assign warning (ticket #266).
	os_darwin.cpp, os_netbsd.cpp, os_os2.cpp, os_qnxnto.cpp, os_solaris.cpp:
	Remove dummy functions no longer called since r3192.

2013-03-27  Christian Franke  <franke@computer.org>

	os_win32.cpp: Silence -Wunused-local-typedefs warning.

2013-03-24  Christian Franke  <franke@computer.org>

	dev_areca.cpp: Add casts to silence C++11 -Wnarrowing warning