@@ -3,6 +3,7 @@ $Id$
 2013-06-17  Alex Samorukov <samm@os2.kiev.ua>
 
 	scsicmds.cpp: fix build on RedHat 9
+	os_freebsd.cpp: skip port multipliers on FreeBSD
 
 2013-06-12  Alex Samorukov <samm@os2.kiev.ua>
 
